<resources>
    <string name="app_name">Entrexit_v3</string>
    <string name="address_87_street_lower">Address: 87 Street Lower</string>
    <string name="contact_number_01_234_4859">Contact Number: 01 234 4859</string>
    <string name="email_xxxx_gmail_com">Email: xxxx@gmail.com</string>
    <string name="enter_your_destination">Enter your destination</string>
    <string name="logo">logo</string>
    <string name="youtube">youtube</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="create_account">Create Account</string>
    <string name="search">Search</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_create__account_2">Create_Account_2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="Cvv">Cvv</string>
    <string name="imageOne">imageOne</string>
    <string name="imageTwo">imageTwo</string>
    <string name="imageThree">imageThree</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="card_number">Card Number</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="card_details">Card Details</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="last_name">Last Name</string>
    <string name="card_s_holder_name">Card\'s Holder Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="holder_name">Holder Name</string>
    <string name="go_back">Go Back</string>
    <string name="system_details">System Details</string>
    <string name="save">save</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="log_in">Log-in</string>
    <string name="locationicon">locationIcon</string>
    <string name="phoneicon">phoneIcon</string>
    <string name="instaicon">instaIcon</string>
    <string name="faceicon">faceIcon</string>
    <string name="_2_3_stars">2 - 3 stars</string>
    <string name="login">Login</string>
    <string name="create_acc">Create acc</string>
    <string name="star_rating">Star Rating</string>
    <string name="price_range">Price Range</string>
    <string name="checkbox">CheckBox</string>
    <string name="_3_4_stars">3 - 4 stars</string>
    <string name="_5_stars">5 stars</string>
    <string name="av_atl_ntica_324_leme_leme_rio_de_janeiro_cep_22010_010_brazil">Av. Atlântica, 324 - Leme, Leme, Rio de Janeiro, CEP 22010-010, Brazil</string>
    <string name="miramar_hotel_by_windsor">Miramar Hotel by Windsor</string>
    <string name="arena_leme_hotel">Arena Leme Hotel</string>
    <string name="receive_sms">Receive SMS</string>
    <string name="receive_email">Receive email</string>
    <string name="booking_info">Booking Info</string>
    <string name="reference_number_123456">Reference number: 123456</string>
    <string name="todo">TODO</string>
    <string name="paypal_payment">PayPal Payment</string>
    <string name="by_checking_this_you_agree_to_the_terms_and_conditions">By checking this you agree to the terms and conditions</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="back">Back</string>
    <string name="user">User</string>
    <string name="mirador_rio_copacabana_hotel">Mirador Copacabana Hotel</string>
    <string name="twin_room_disability_access">Twin Room - Disability Access</string>
    <string name="executive_room_with_ocean_view">Executive Room with Ocean View</string>
    <string name="standard_twin_room_no_view">Standard Twin Room No View</string>
    <string name="imageone">imageOne</string>
    <string name="imagetwo">imageTwo</string>
    <string name="imagethree">imageThree</string>
    <string name="parking">Parking</string>
    <string name="pets_allowed">Pets allowed</string>
    <string name="price_for_1_night">Price for 1 night</string>
    <string name="not_a_member_yet_sign_up_here">Not a member yet? Sign-up here</string>
    <string name="facilities">Facilities</string>
    <string name="gallery">Gallery</string>
    <string name="maps">maps</string>
    <string name="superking_size_bed">Superking Size Bed</string>
    <string name="_90_euro_nigth">90 Euro nigth</string>
    <string name="_120_euro_night">120 Euro night</string>
    <string name="_75_euro_night">75 Euro night</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="not_a_member_sign_up_here">Not a member? Sign-up here</string>
    <string name="proceed">Proceed</string>
    <string name="leonardo">Leonardo</string>
    <string name="x18105971">X18105971</string>
    <string name="gimenes">Gimenes</string>
    <string name="_08_03_1994">08/03/1994</string>
    <string name="my_details">My Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="equals">=</string>
    <string name="_360">€360</string>
    <string name="total">Total</string>
    <string name="_720">€720</string>
    <string name="x">X</string>
    <string name="number_of_nights">Number of Nights:</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="number_of_guests">Number of Guests:</string>
    <string name="_3">3</string>
    <string name="pool">Pool</string>
    <string name="_2_stars">2 stars</string>
    <string name="_4_stars">4 stars</string>
    <string name="_1">1</string>
    <string name="_3_stars">3 stars</string>
    <string name="_2">2</string>
    <string name="_16_03_2020">20/03/2020</string>
    <string name="_13_03_2020">24/03/2020</string>
    <string name="_4">4</string>
    <string name="select">Select</string>
    <string name="_28_03_2020">28/03/2020</string>
    <string name="welcome_user">Welcome User</string>
    <string name="my_bookings">My Bookings</string>
    <string name="check_in">Check-in</string>
    <string name="by_selection_initiate_you_will_finish_your_check_in">By selection initiate you will finish your check-in</string>
    <string name="please_note_that_this_option_will_only_be_available_once_your_location_is_ad_check_in_date_are_correct">Please note that this option will only be available once your location is ad check-in date are correct.</string>
    <string name="initiate_nfc_signal">NFC signal</string>
    <string name="hotel_name_booking_info_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nunc_molestie_vel_mauris_a_porta_integer_quis_scelerisque_massa_maecenas_sed_lacus_libero_donec_auctor_sodales_fermentum_in_porttitor_maximus_ornare">Hotel name + booking info Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie vel mauris a porta. Integer quis scelerisque massa. Maecenas sed lacus libero. Donec auctor sodales fermentum. In porttitor maximus ornare.</string>
    <string name="please_ony_check_out_once_you_have_left_the_room">Please, ony check-out once you have left the room.</string>
    <string name="please_let_us_know_more_about_your_experience">Please, let us know more about your experience!</string>
    <string name="submit_review">Submit review</string>
    <string name="settings">Settings</string>
    <string name="check_out">Check-out</string>
    <string name="reservation_number">Reservation Number</string>
    <string name="check_room_availability">Check Room Availability</string>
    <string-array name="Hotel_Room_List">
        <item>Room 1</item>
        <item>Room 2</item>
        <item>Room 3</item>
        <item>Room 4</item>
    </string-array>
    <string-array name="Hotel_Price_List">
        <item>€200</item>
        <item>€250</item>
        <item>€400</item>
        <item>€550</item>
    </string-array>
    <string-array name="Hotel_Description_List">
        <item>Single, in-suit, gorgeous view with breakfast included</item>
        <item>double, breakfast included, ocean view</item>
        <item>double, in-suit, gorgeous view with breakfast included</item>
        <item>3 single or 1 double 1 single, in-suit, gorgeous view with breakfast included</item>
    </string-array>
    <string name="title_activity_bookings">Bookings</string>
    <string name="action_settings">Settings</string>
    <string name="all_bookings_will_appear_here">ALL BOOKINGS WILL APPEAR HERE</string>
    <string name="full_name">Full Name</string>
    <string name="check_booking">Check Booking</string>
    <string name="title_activity_maps">Map</string>
    <string name="picturethree">picturethree</string>
    <string name="pictureone">pictureone</string>
    <string name="picturetwo">picturetwo</string>
    <string name="picturefour">picturefour</string>
    <string name="check">Check</string>
    <string name="deluxe_twin_room">Deluxe Twin Room</string>
    <string name="show_prices">Show Prices</string>
    <string name="senior_suit">Senior Suit</string>
    <string name="double_king_room">Double King Room</string>
    <string name="room_type">Room Type</string>
    <string name="deluxe_family_room">Deluxe Family Room</string>
    <string name="sleeps">Sleeps</string>
    <string name="availability">Availability</string>
    <string name="none">none</string>
    <string name="_500_m_from_centre">500 m from centre</string>
    <string name="the_north_star_hotel_is_opposite_dublin_s_connolly_station_and_the_ifsc_the_hotel_offers_an_award_winning_restaurant_a_sauna_gym_and_rooms_with_power_showers">The North Star Hotel is opposite Dublin’s Connolly Station and the IFSC. The hotel offers an award-winning restaurant, a sauna, gym and rooms with power showers.</string>
    <string name="situated_in_the_heart_of_dublin_city_centre_in_a_historic_building_the_gresham_hotel_benefits_from_its_own_restaurant_toddy_s_and_a_bar">Situated in the heart of Dublin city centre in a historic building, The Gresham Hotel benefits from its own restaurant \'Toddy\'s\', and a bar</string>
    <string name="_275_m_from_centre">275 m from centre</string>
    <string name="located_in_dublin_the_chic_temple_bar_inn_offers_free_wifi_access_throughout_and_a_24_hour_front_desk_the_popular_o_connell_street_and_trinity_college_are_both_a_3_minute_walk_away">Located in Dublin, the chic Temple Bar Inn offers free WiFi access throughout and a 24-hour front desk. The popular O\'Connell Street and Trinity College are both a 3-minute walk away</string>
    <string name="_250_m_from_centre">250 m from centre</string>
    <string name="the_north_star_hotel">The North Star Hotel</string>
    <string name="temple_bar_inn">Temple Bar Inn</string>
    <string name="hotel_riu_plaza_dublin">Hotel Riu Plaza Dublin</string>
    <string name="premier_king">Premier King</string>
    <string name="classic_room">Classic Room</string>
    <string name="family_room">Family Room</string>
    <string name="amiens_street_d1_dublin_ireland">Amiens Street, D1 Dublin, Ireland</string>
    <string name="welcome">Welcome</string>
    <string name="textview">TextView</string>
</resources>
